unpackaged/main/default/objects/RICSC_ConsentUpdate__e/RICSC_ConsentUpdate__e.object-meta.xml
<CustomObject>
    <description>Platform event that communicates changes of privacy consents</description>
    <label>Consent Update</label>
    <pluralLabel>Consent Updates</pluralLabel>
</CustomObject>