unpackaged/main/default/objects/RICSC_ConsentUpdate__e/fields/RICSC_CanBeContacted__c.field-meta.xml
<CustomField>
        <fullName>RICSC_CanBeContacted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Be Contacted</label>
        <type>Checkbox</type>
    </CustomField>