unpackaged/main/default/objects/RICSC_ConsentUpdate__e/fields/RICSC_CustomerMaisonCode__c.field-meta.xml
<CustomField>
        <fullName>RICSC_CustomerMaisonCode__c</fullName>
        <description>3 digits code of the Maison, used to call the correct endpoint of the REST web service in SWSE.</description>
        <label>Customer Maison Code</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>