unpackaged/main/default/objects/RICSC_ConsentUpdate__e/fields/RICSC_ElectronicContact__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ElectronicContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electronic Contact</label>
        <type>Checkbox</type>
    </CustomField>