unpackaged/main/default/objects/RICSC_ConsentUpdate__e/fields/RICSC_ExternalID__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ExternalID__c</fullName>
        <description>it identifies the unique ID on the target system ( SAP CRM,  Legacy CRM or SWSE))</description>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>