unpackaged/main/default/objects/RICSC_ConsentUpdate__e/fields/RICSC_PostalContact__c.field-meta.xml
<CustomField>
        <fullName>RICSC_PostalContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Postal Contact</label>
        <type>Checkbox</type>
    </CustomField>