unpackaged/main/default/objects/RICSC_ConsentUpdate__e/fields/RICSC_TargetSystem__c.field-meta.xml
<CustomField>
        <fullName>RICSC_TargetSystem__c</fullName>
        <description>This field contains the target system to which the platform event should be delivered</description>
        <label>Target System</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>