unpackaged/main/default/objects/RICSC_ConsentUpdate__e/fields/RICSC_VoiceContact__c.field-meta.xml
<CustomField>
        <fullName>RICSC_VoiceContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voice Contact</label>
        <type>Checkbox</type>
    </CustomField>